Small fix AL tag

--- a/src/content/posts/adventurers-league/adventurers-league-russia-vs-adventurers-league-rossiya-al-russia.mdx
+++ b/src/content/posts/adventurers-league/adventurers-league-russia-vs-adventurers-league-rossiya-al-russia.mdx
@@ -3,7 +3,7 @@ title: "Adventurers League Russia Vs Adventurers League Россия (AL Russia)
 description: "Adventurers League Russia Vs Adventurers League Россия (AL Russia)"
 date: "2018-06-07"
 tags:
-  - "Лига Авантюристов"
+  - Лига Авантюристов
 ---
 
 ## Adventurers League Russia Vs Adventurers League Россия (AL Russia) или как спустить свой авторитет в унитаз не заметив этого
