--- a/src/content/posts/adventurers-league/dungeon-master-guide-7-season.mdx
+++ b/src/content/posts/adventurers-league/dungeon-master-guide-7-season.mdx
@@ -3,10 +3,10 @@ title: "Руководство Мастера по Лиге Авантюрист
 description: "Руководство Мастера по Лиге Авантюристов 7.0"
 date: "2018-04-24"
 tags:
-  - "Лига Авантюристов"
-  - "Перевод"
-  - "Руководство Мастера"
-  - "сезон 7"
+  - Лига Авантюристов
+  - Перевод
+  - Руководство Мастера
+  - Сезон 7
 ---
 
 > [Скачать Руководство Мастера по Лиге Авантюристов 7.0 на русском языке](/wp-content/uploads/2018/07/al_dm_guide_7-0_rus.pdf "AL_DM_Guide_7.0_rus")
