--- a/src/content/posts/adventurers-league/dungeon-master-guide-9-season.mdx
+++ b/src/content/posts/adventurers-league/dungeon-master-guide-9-season.mdx
@@ -3,10 +3,10 @@ title: "Руководство Мастера Лиги Авантюристов 
 description: "Руководство Мастера Лиги Авантюристов 9.0 - текущий перевод"
 date: "2019-09-13"
 tags:
-  - "Лига Авантюристов"
-  - "Перевод"
-  - "Руководство Мастера"
-  - "сезон 9"
+  - Лига Авантюристов
+  - Перевод
+  - Руководство Мастера
+  - Сезон 9
 ---
 
 Не для перепродажи.
