--- a/src/content/posts/adventurers-league/otgoloski-krasnoj-vojny.mdx
+++ b/src/content/posts/adventurers-league/otgoloski-krasnoj-vojny.mdx
@@ -4,8 +4,8 @@ title: "Отголоски Красной Войны"
 description: "Отголоски Красной Войны"
 date: "2018-03-14"
 tags:
-  - "Лига Авантюристов"
-  - "Красная Война"
+  - Лига Авантюристов
+  - Красная Война
 ---
 
 Возможно, вы слышали упоминания о какой-то «Красной Войне», про которую судачат в тавернах по всему Фаэруну. Если вы находитесь в замешательстве относительно того, что это за война, то вам не следует читать дальше .
