--- a/src/content/posts/adventurers-league/phlan-dm.mdx
+++ b/src/content/posts/adventurers-league/phlan-dm.mdx
@@ -3,10 +3,10 @@ title: "Флан для Мастера"
 description: "Флан для Мастера"
 date: "2018-03-13"
 tags:
-  - "Лига Авантюристов"
-  - "Флан"
-  - "сезон 1"
-  - "Советы Мастеру"
+  - Лига Авантюристов
+  - Флан
+  - Сезон 1
+  - Советы Мастеру
 ---
 
 ## Players Handouts
