--- a/src/content/posts/adventurers-league/player-guide-7-season.mdx
+++ b/src/content/posts/adventurers-league/player-guide-7-season.mdx
@@ -3,10 +3,10 @@ title: "Руководство игрока по Лиге Авантюристо
 description: "Руководство игрока по Лиге Авантюристов 7.0"
 date: "2018-04-24"
 tags:
-  - "Лига Авантюристов"
-  - "Перевод"
-  - "Руководство игрока"
-  - "сезон 7"
+  - Лига Авантюристов
+  - Перевод
+  - Руководство игрока
+  - Сезон 7
 ---
 
 > [Скачать Руководство Игрока по Лиге Авантюристов 7.0 на русском языке](/wp-content/uploads/2018/07/al_player_guide_7-0_rus.pdf "AL_Player_Guide_7.0_rus")
