--- a/src/content/posts/adventurers-league/season-2-narrative-mulmaster.mdx
+++ b/src/content/posts/adventurers-league/season-2-narrative-mulmaster.mdx
@@ -3,10 +3,10 @@ title: "Повествование второго сезона Лиги Аван
 description: "Повествование второго сезона Лиги Авантюристов- Мулмастер"
 date: "2018-04-01"
 tags:
-  - "Лига Авантюристов"
-  - "сезон 2"
-  - "Мулмастер"
-  - "Советы Мастеру"
+  - Лига Авантюристов
+  - Сезон 2
+  - Мулмастер
+  - Советы Мастеру
 ---
 
 ![925821-4550_Mulmaster_-_20170104_v1.01_pre-Devastation](/images/925821-4550_mulmaster_-_20170104_v1-01_pre-devastation.png)
