--- a/src/content/posts/adventurers-league/uslugi-zaklinatelej.mdx
+++ b/src/content/posts/adventurers-league/uslugi-zaklinatelej.mdx
@@ -3,25 +3,25 @@ title: "Услуги заклинателей"
 description: "Услуги заклинателей"
 date: "2018-03-13"
 tags:
-  - "Лига Авантюристов"
+  - Лига Авантюристов
 ---
 
-В любом поселении размером с маленький городок или больше можно найти услуги заклинателей. Для доступа к этим услугам у персонажей должна быть возможность добраться до этого поселения. Кроме того, если группа заканчивает приключение, то предполагается, что группа возвращается в ближайшее поселение. Обычно заклинатели предоставляют услуги лечения и восстановления, а также заклинания, добывающие информацию. Прочие доступные услуги могут определяться приключением. Число заклинаний, доступных для накладывания в качестве услуги, ограничено: максимум три раза в день, если не сказано иное.
+В любом поселении размером с маленький городок или больше можно найти услуги заклинателей. Для доступа к этим услугам у персонажей должна быть возможность добраться до этого поселения. Кроме того, если группа заканчивает приключение, то предполагается, что группа возвращается в ближайшее поселение. Обычно заклинатели предоставляют услуги лечения и восстановления, а также заклинания, добывающие информацию. Прочие доступные услуги могут определяться приключением. Число заклинаний, доступных для накладывания в качестве услуги, ограничено: максимум три раза в день, если не сказано иное.
 
-| Spell                                                | Cost      |
-| ---------------------------------------------------- | --------- |
-| Лечение ран - Cure wounds                            | 10 gp     |
-| Опознание - Identify                                 | 20 gp     |
-| Малое восстановление - Lesser restoration            | 40 gp     |
-| Молитва лечения - Prayer of healing                  | 40 gp     |
-| Развеивание магии - Dispel magic                     | 90 gp     |
-| Снятие проклятья - Remove curse                      | 90 gp     |
-| Разговор с мёртвым - Speak with dead                 | 90 gp     |
-| Предсказание - Divination                            | 210 gp    |
-| Высшее восстановление - Greater restoration          | 450 gp    |
-| Оживление - Raise dead                               | 1,250 gp  |
-| Воскрешение - Resurrection[1]                        | 3,000 gp  |
-| Истинное Воскрешение - True resurrection[1]          | 50,000 gp |
+| Заклинания                                  | Цена      |
+| ------------------------------------------- | --------- |
+| Лечение ран - Cure wounds                   | 10 зм     |
+| Опознание - Identify                        | 20 зм     |
+| Малое восстановление - Lesser restoration   | 40 зм     |
+| Молитва лечения - Prayer of healing         | 40 зм     |
+| Развеивание магии - Dispel magic            | 90 зм     |
+| Снятие проклятья - Remove curse             | 90 зм     |
+| Разговор с мёртвым - Speak with dead        | 90 зм     |
+| Предсказание - Divination                   | 210 зм    |
+| Высшее восстановление - Greater restoration | 450 зм    |
+| Оживление - Raise dead                      | 1,250 зм  |
+| Воскрешение - Resurrection[1]               | 3,000 зм  |
+| Истинное Воскрешение - True resurrection[1] | 50,000 зм |
 
 Предыстория послушника Персонаж с предысторией «послушник», обращающийся за услугами заклинателей в храм своей веры, получает одно заклинание в день из таблицы «Услуги заклинателей» бесплатно. Единственное, что оплачивается, это базовая стоимость использованных материальных компонентов, если они есть.
 
