--- a/src/content/singles/about-us.mdx
+++ b/src/content/singles/about-us.mdx
@@ -13,7 +13,7 @@ description: Про нас
 
 ## Наша команда
 
-- Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знанинй по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом. Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор".
+- Антон "Palant" Палихов - ГМ, аналитик, немного переводчик и собиратель знаний по сеттингам. Пишет homebrew материалы для пятой редакции и всегда готов помочь другим мастерам и игрокам советом. Любит повторять фразу "Для самоорганизации сообщества ему необходим самоорганизатор".
 - Дмитрий "xattttta" Нелюбов - ГМ, игрок, переводчик, любит простые правила
 - Роман "JunkTurkey" Зверев, ГМ, программист
 - Ира "Featon" Кузюр, переводчик,
@@ -26,13 +26,13 @@ description: Про нас
 
 ## Как появилось сообщество?
 
-Изначально это был сервер для вождения кампании Гром Штормового Короля - который был создан 31.12.2016. После того как Антон очень активно стал водить приключения в рамках организованной кампании Лига Авантюристов на сервер начало приходить много людей. Ьлагодаря вождению на онлайн-конвентах эпических приключений - количество людей выросло еще больше.
+Изначально это был сервер для вождения кампании Гром Штормового Короля - который был создан 31.12.2016. После того как Антон очень активно стал водить приключения в рамках организованной кампании Лига Авантюристов на сервер начало приходить много людей. Благодаря вождению на онлайн-конвентах эпических приключений - количество людей выросло еще больше.
 
 И понемногу стало приходить понимание, что этот сервер является чем-то большим, чем простая площадка для вождения игр.
 
 ## Вождение
 
-Мастера с этого сообщества водили игры в рамках Лиги Авантюристов практически на каждом онлайн-конвенте, в т.ч.участвуя в подготовке этих самих приключений в Roll20 и созданни для них карт.
+Мастера с этого сообщества водили игры в рамках Лиги Авантюристов практически на каждом онлайн-конвенте, в т.ч.участвуя в подготовке этих самих приключений в Roll20 и создании для них карт.
 
 Таким образом мы провели все эпические приключения 1-8 сезонов Лиги Авантюристов, а также кампании Оракул Войны в Эберроне.
 
