--- a/src/content/posts/adventurers-league/player-guide-12-season-1.mdx
+++ b/src/content/posts/adventurers-league/player-guide-12-season-1.mdx
@@ -3,10 +3,10 @@ title: "Руководство игрока по Лиге Авантюристо
 description: "Руководство игрока по Лиге Авантюристов 12.1"
 date: "2022-08-07"
 tags:
-  - "Лига Авантюристов"
-  - "Перевод"
-  - "Руководство игрока"
-  - "сезон 12"
+  - Лига Авантюристов
+  - Перевод
+  - Руководство игрока
+  - Сезон 12
 ---
 
 Ребята из клуба "Сундук Дракона" перевели и оформили руководство игрока по Лиге Авантюристов в Забытых Королевствах версия 12.1
