--- a/src/content/posts/core-d20/about-commanders-and-units.mdx
+++ b/src/content/posts/core-d20/about-commanders-and-units.mdx
@@ -5,7 +5,7 @@ date: "2021-07-18"
 tags:
   - Отряд
   - Командир
-  - Роль
+  - Роли
   - Сражение
   - Бестиарий
   - D&D 5e
@@ -21,7 +21,7 @@ tags:
 
 — и нарративные способы – такие как отдача своевременных и правильных приказов, увеличение боевого духа солдат, понижение боевого духа противников -в общем, все что придет в голову Мастеру и игрокам.
 
-Собственно, переходя к игромеханическому воздействию командира на солдат также вспомним некоторые особенности старых редакций в части командиров наемников, где были требования к наличию сержантов, лейтенантов и капитанов – так, говоря усредненно (на основании книги Downtime 5e от Hack&Slash Master) – один сержант требовался на 10 солдат, 1 лейтенант на 30 солдат, и 1 капитан на 100 солдат. При этом если обычный солдат имел в среднем 1 кость хитов, то у сержанта должно было быть минимум на 4 больше, лейтенант должен был быть воином 4-6 уровня, а капитан и того выше.
+Собственно, переходя к игромеханическому воздействию командира на солдат также вспомним некоторые особенности старых редакций в части командиров наемников, где были требования к наличию сержантов, лейтенантов и капитанов – так, говоря усреднённо (на основании книги Downtime 5e от Hack&Slash Master) – один сержант требовался на 10 солдат, 1 лейтенант на 30 солдат, и 1 капитан на 100 солдат. При этом если обычный солдат имел в среднем 1 кость хитов, то у сержанта должно было быть минимум на 4 больше, лейтенант должен был быть воином 4-6 уровня, а капитан и того выше.
 
 В принципе это сохраняется и в базовой версии пятой редакции:
 
