--- a/src/content/posts/core-d20/about-tension-dice.mdx
+++ b/src/content/posts/core-d20/about-tension-dice.mdx
@@ -68,17 +68,17 @@ tags:
 
 Примеры:
 
-Вот несколько примеров сложностей и того, как будет выглядеть добавление Костей Напряженности, включая возможные осложнения, происходящии, если на Кости Напряженностивыпала 1.
+Вот несколько примеров сложностей и того, как будет выглядеть добавление Костей Напряженности, включая возможные осложнения, происходящии, если на Кости Напряженности выпала 1.
 
 Сценарий: группа движется по склоне неустойчивой покрытой снегом горы.
 
-• Добавление Кости Напряженностипроисходит при таких событиях: неудачные проверки на тишину, падение чего-либо, слишком громкий разговор (даже за столом) - все это может добавить кубики в чашу.
+• Добавление Кости Напряженности происходит при таких событиях: неудачные проверки на тишину, падение чего-либо, слишком громкий разговор (даже за столом) - все это может добавить кубики в чашу.
 
 А осложнением будет вызванная лавина.
 
 Сценарий: опасный участок путешествия через особенно холодную и / или заполненную монстрами область.
 
-Добавление Кости Напржянности: неудачные проверки Восприятия, слишком долгое пребывание в области в поисках предмета по заданию или сокровища, короткие отдыхи в этой области, небольшие сражения в области. Добавляйте Кость Напряженностик аждый раунд боя.
+Добавление Кости Напряжённости: неудачные проверки Восприятия, слишком долгое пребывание в области в поисках предмета по заданию или сокровища, короткие отдыхи в этой области, небольшие сражения в области. Добавляйте Кость Напряженности каждый раунд боя.
 
 Осложнение: случайное столкновение с самыми опасными региональными существами или при использовании правил по Стуже дополнительный спасбросок Телосложения. А если выпадет бросить несколько единиц, то персонажам возможно придется сражаться с более сложными противниками, например, перебросить Кости на ковид.
 
