--- a/src/content/posts/core-d20/aristocrat-background.mdx
+++ b/src/content/posts/core-d20/aristocrat-background.mdx
@@ -8,7 +8,7 @@ tags:
   - Предыстория
 ---
 
-№№АРИСТОКРАТ [Предыстория]
+## АРИСТОКРАТ [Предыстория]
 
 Всю свою жизнь вы, из своего дома на высоком холме, смотрели вниз на немытую толпу (иногда образно, а иногда и буквально). Ваши, отороченные мехами, одежды и занятия изящными искусствами означают, что вы богаты, скорее всего, от рождения, вы член аристократии, правящего класса. Ни один из ваших родственников не заседает в Городском совете, не является Лордом или Леди …. пока. Вы один из элиты вашего родного города, и неважно, жаждите ли вы более высокого положения, или нет, вы лично вхожи в клубы, где аристократия собирается для замыслов, интриг, бизнеса, и обсуждения искусства, и что самое главное, вы видите и будете видеть всё это.
 
@@ -24,37 +24,40 @@ tags:
 
 Ваш город управляется аристократией и живет ради аристократии. Все другие социальные классы подчинены вам, даже духовенство, солдаты, стража и волшебники относятся к вам с уважением. Другие аристократы и дворяне принимают вас в своих кругах, и, скорее всего, знают про вас, или вас лично. Ваши связи, при правильном подходе, могут позволить вам пошептать в ухо Лорда или Леди.
 
-к8 Черта характера
+| к8  | Черта характера                                                                            |
+| --- | ------------------------------------------------------------------------------------------ |
+| 1   | Мои амбиции безграничны. Однажды я стану Лордом или Леди!                                  |
+| 2   | Я должен всегда выглядеть как можно лучше                                                  |
+| 3   | Красота везде. Я могу найти красоту в самом уродливом человеке и самой ужасающей трагедии. |
+| 4   | Правила приличия должны быть сохранены любой ценой.                                        |
+| 5   | Если у меня будет возможность, то я никогда не признаюсь, что ошибался.                    |
+| 6   | Я очень образован, и часто напоминаю другим об этом.                                       |
+| 7   | Я беру, что могу сегодня, ведь я не знаю, что будет завтра.                                |
+| 8   | Моя жизнь полна танцев, песен, выпивки и любви.                                            |
 
-1 Мои амбиции безграничны. Однажды я стану Лордом или Леди!
-2 Я должен всегда выглядеть как можно лучше
-3 Красота везде. Я могу найти красоту в самом уродливом человеке и самой ужасающей трагедии.
-4 Правила приличия должны быть сохранены любой ценой.
-5 Если у меня будет возможность, то я никогда не признаюсь, что ошибался.
-6 Я очень образован, и часто напоминаю другим об этом.
-7 Я беру, что могу сегодня, ведь я не знаю, что будет завтра.
-8 Моя жизнь полна танцев, песен, выпивки и любви.
+| к6  | Идеал                                                                                               |
+| --- | --------------------------------------------------------------------------------------------------- |
+| 1   | Щедрость. Я должен помогать и защищать менее удачливых. (Добрый)                                    |
+| 2   | Верность. Мое слово, данное однажды, нерушимо (Законный)                                            |
+| 3   | Безжалостность. Я не забочусь о негативе, который мои действия могут принести в чужую жизнь. (Зло)  |
+| 4   | Импульсивность. Я следую порывам сердца. (Хаотичный)                                                |
+| 5   | Невежество. Объяснения так скучны. (Нейтральный)                                                    |
+| 6   | Изоляционизм. Я забочусь о своей семье и своих людях. Другие должны смотреть за собой сами. (Любой) |
 
-к6 Идеал
-1 Щедрость. Я должен помогать и защищать менее удачливых. (Добрый)
-2 Верность. Мое слово, данное однажды, нерушимо (Законный)
-3 Безжалостность. Я не забочусь о негативе, который мои действия могут принести в чужую жизнь. (Зло)
-4 Импульсивность. Я следую порывам сердца. (Хаотичный)
-5 Невежество. Объяснения так скучны. (Нейтральный)
-6 Изоляционизм. Я забочусь о своей семье и своих людях. Другие должны смотреть за собой сами. (Любой)
+| к6  | Привязанность                                                                                                                          |
+| --- | -------------------------------------------------------------------------------------------------------------------------------------- |
+| 1   | Я посвятил себя, свои таланты, и свои состояния служе¬нию одному из многочисленных городских храмов.                                   |
+| 2   | Моя семья и я — верные сторонники текущего правителя. Наши состояния жестко завязаны на нем. Я сделаю что угодно, чтоб поддержать ее.  |
+| 3   | Как и многие семьи, которые были близки к предыдущему правителю, моя сильно пострадала из-за его падения. Втайне мы чтим его память.   |
+| 4   | Моя семья участвует в заговоре с претендентом на трон, чтоб посадить его в кресло правителя. Предательство — быстрейший путь к власти. |
+| 5   | Богатство и могущество — ничто. Блаженство можно найти только в искусстве.                                                             |
+| 6   | Неважно, как ты себя чувствуешь, кого знаешь, или что делаешь, важно — как ты выглядишь; я выгляжу умопомрачительно.                   |
 
-к6 Привязанность
-1 Я посвятил себя, свои таланты, и свои состояния служе¬нию одному из многочисленных городских храмов.
-2 Моя семья и я — верные сторонники текущего правителя. Наши состояния жестко завязаны на нем. Я сделаю что угодно, чтоб поддержать ее.
-3 Как и многие семьи, которые были близки к предыдущему правителю, моя сильно пострадала из-за его падения. Втайне мы чтим его память.
-4 Моя семья участвует в заговоре с претендентом на трон, чтоб посадить его в кресло правителя. Предательство — быстрейший путь к власти.
-5 Богатство и могущество — ничто. Блаженство можно найти только в искусстве.
-6 Неважно, как ты себя чувствуешь, кого знаешь, или что делаешь, важно — как ты выглядишь; я выгляжу умопомрачительно.
-
-к6 Слабость
-1 Испытываю трудности в заботе о ком-либо кроме себя.
-2 Выросши в богатстве, я небрежен с финансами. Я сорю деньгами и очень щедр.
-3 Конец (мои достижения) оправдывают любые средства.
-4 У меня должно быть то, чего я хочу, немедленно.
-5 Моя семья потеряла все. Я должен делать вид, что все нормально, чтоб мы не превратились в посмешище.
-6 У меня нет художественного вкуса. Я скрываю это за радикальными взглядами и так стал законодателем мод.
+| к6  | Слабость                                                                                                |
+| --- | ------------------------------------------------------------------------------------------------------- |
+| 1   | Испытываю трудности в заботе о ком-либо кроме себя.                                                     |
+| 2   | Выросши в богатстве, я небрежен с финансами. Я сорю деньгами и очень щедр.                              |
+| 3   | Конец (мои достижения) оправдывают любые средства.                                                      |
+| 4   | У меня должно быть то, чего я хочу, немедленно.                                                         |
+| 5   | Моя семья потеряла все. Я должен делать вид, что все нормально, чтоб мы не превратились в посмешище.    |
+| 6   | У меня нет художественного вкуса. Я скрываю это за радикальными взглядами и так стал законодателем мод. |
