--- a/src/content/posts/core-d20/bestiary-warbeast-template.mdx
+++ b/src/content/posts/core-d20/bestiary-warbeast-template.mdx
@@ -39,7 +39,7 @@ tags:
 
 **Боевой скакун.** Всадник на обученном боевом звере получает преимущество на все проверки, чтобы сохранить контроль над животным или не упасть с седла. Обученный боевой зверь получает владение легкими, средними и тяжелыми доспехами.
 
-Если бзовое существо - насекомое, то оно не получает эту особенность из-за своего низкого интеллекта.
+Если базовое существо - насекомое, то оно не получает эту особенность из-за своего низкого интеллекта.
 
 **Навыки** Боевой зверь получает владение навыками Атлетики и Восприятия, если не владел до этого.
 
@@ -53,7 +53,7 @@ tags:
 
 Боевой зверь, основанный на диком животном, должен быть приручен в течение года (КС 13 + КХ зверя), а затем обучен в течение двух месяцев (КС 15 + КХ зверя).
 
-Боевой зверь, основанный на хищном животном, должен быть выращен в течение года (КС 15 + КХ зверя), затем обучен в течение 2 месяцев (КС 20 + HD зверя).
+Боевой зверь, основанный на хищном животном, должен быть выращен в течение года (КС 15 + КХ зверя), затем обучен в течение 2 месяцев (КС 20 + КХ зверя).
 
 Боевой зверь, созданный на основе насекомого, будучи безмозглым, не поддается дрессировке. Обученный зверь способен нести всадника в бою и приобретает особое качество "Боевой скакун" (см. выше).
 
