--- a/src/content/posts/core-d20/duelist-fighter-archetype.mdx
+++ b/src/content/posts/core-d20/duelist-fighter-archetype.mdx
@@ -20,7 +20,7 @@ tags:
 **Использование костей превосходства.** Вы можете тратить кости превосходства, чтобы получить ряд различных преимущества:
 
 1. Когда вы совершаете атаку оружием ближнего боя против существа, отмеченного вами или не имеющего в радиусе 5 футов никого из ваших союзников, вы можете потратить одну кость превосходства и добавить его к броску атаки. Вы можете использовать эту способность до или после броска атаки, но до того, как будут применены эффекты атаки.
-2. Когда вы поражаете существо атакой оружием, вы можете потратить одну кость превосходства, чтобы попытаться обезоружить цель, заставив ее бросить один предмет по вашему выбору, который она держит в руках. Вы добавляете кубик превосходства к броску урона атаки, и цель должна сделать спасбросок силы (КС равен 8 + ваш бонус владения + ваш модификатор силы или ловкости (на выбор)]. При неудачном спасброске она роняет выбранный вами предмет. Предмет приземляется у его ног.
+2. Когда вы поражаете существо атакой оружием, вы можете потратить одну кость превосходства, чтобы попытаться обезоружить цель, заставив ее бросить один предмет по вашему выбору, который она держит в руках. Вы добавляете кубик превосходства к броску урона атаки, и цель должна сделать спасбросок силы (КС равен 8 + ваш бонус владения + ваш модификатор силы или ловкости (на выбор)). При неудачном спасброске она роняет выбранный вами предмет. Предмет приземляется у его ног.
 3. Когда вы попадаете броском атаки в существо, находящееся в пределах 5 футов от вас, вы можете потратить одну кость превосходства, чтобы оттолкнуть цель на расстояние до 5 футов от себя и нанести ей дополнительный урон, равный числу, брошенному на кубике превосходства. После этого вы можете немедленно использовать свою реакцию, чтобы переместиться со скоростью, равной вашей скорости, в незанятое пространство в радиусе 5 футов от цели.
 4. Во время перемещения, если на вас нет тяжелой брони или щита, вы можете потратить одну кость превосходства, бросить его и прибавить брошенное число к своему КС, пока не прекратите движение. При этом до конца следующего хода вы получаете скорость подъема, равную скорости ходьбы.
 
