--- a/src/content/posts/core-d20/background-merchant.mdx
+++ b/src/content/posts/core-d20/background-merchant.mdx
@@ -13,7 +13,7 @@ tags:
 Независимо от того,на что вы тратили свою прошлую жизнь, вы решили ее бросить и искать приключений. Однако обучение, которое вы получили, и контакты, которые вы возможно получили, послужат вам на поприще авантюриста.
 
 **Владение навыками:** Проницательность, Восприятие  
-В**ладение инструментами:** Транспорт (сухопутный), транспорт (водный)
+**Владение инструментами:** Транспорт (сухопутный), транспорт (водный)
 
 **Снаряжение:** Комплект отличной одежды, кольцо с гравировкой, письмо с рекомендациями от торгового дома вашей семьи и поясной кошель с 25 зм.
 
@@ -30,15 +30,15 @@ tags:
 Вы и ваша семья имеете торговые контакты, такие как караванщики, торговцы, моряки, ремесленники и фермеры по всему региону. Один раз за игровую сессию, находясь в любой из этих областей, вы можете использовать эти контакты, чтобы получить информацию о местности или передать сообщение кому-то в этих областях, даже через большое расстояние между двумя областями.
 
 **Черта характера**
-| 1 | Я наполняю свои вечера вином или медом, и песнями. |
-|---|-----------------------------------------------------------------------------------------------------|
-| 2 | Я восхищаюсь гладиаторами и наслаждаюсь боями на арене. |
-| 3 | Я получил свое богатство от грантодателя. Редко бывает, что кто-то добивается богатства в одиночку. |
-| 4 | Я оставляю разбитые сердца по всему региону |
-| 5 | Я много работаю и редко уделяю время веселью. |
-| 6 | Я очень набожный и часто молюсь. |
-| 7 | Красные Перья поймали меня однажды, Я ненавижу их. |
-| 8 | Я задаю много вопросов чтобы получить информацию о тех с кем я работаю и веду дела. |
+| 1   | Я наполняю свои вечера вином или медом, и песнями.                                                  |
+| --- | --------------------------------------------------------------------------------------------------- |
+| 2   | Я восхищаюсь гладиаторами и наслаждаюсь боями на арене.                                             |
+| 3   | Я получил свое богатство от грантодателя. Редко бывает, что кто-то добивается богатства в одиночку. |
+| 4   | Я оставляю разбитые сердца по всему региону                                                         |
+| 5   | Я много работаю и редко уделяю время веселью.                                                       |
+| 6   | Я очень набожный и часто молюсь.                                                                    |
+| 7   | Красные Перья поймали меня однажды, Я ненавижу их.                                                  |
+| 8   | Я задаю много вопросов чтобы получить информацию о тех с кем я работаю и веду дела.                 |
 
 **Идеал**
 
