Tag fix "translate" - "Перевод"

--- a/src/content/posts/articles/grimtooth-traps-too-part2.mdx
+++ b/src/content/posts/articles/grimtooth-traps-too-part2.mdx
@@ -3,7 +3,7 @@ title: "[Перевод] Ещё 101 Ловушка Темноклыка (Grimtoo
 description: ПЕРЕВОД второй части книги Еще 101 ловушка темноклыка #translate #dnd #traps #grimtoothtraps #tools #crosspost
 date: 2024-03-13
 tags:
-  - перевод
+  - Перевод
   - ловушки
 ---
 
