--- a/src/content/posts/articles/index-social-encounters.mdx
+++ b/src/content/posts/articles/index-social-encounters.mdx
@@ -8,8 +8,7 @@ tags:
   - D&D 5e
   - D&D 3.5e
   - Core d20 RPG
-  - перевод
-  - translate
+  - Перевод
   - Социальные столкновения
   - Социальные взаимодействия
 ---
