--- a/src/content/posts/articles/lazy-dm-resource-document-translation.mdx
+++ b/src/content/posts/articles/lazy-dm-resource-document-translation.mdx
@@ -4,8 +4,7 @@ description: Завершен перевод ресурсного докумен
 date: "2024-02-19"
 tags:
   - Slyflourish
-  - перевод
-  - translate
+  - Перевод
   - GM advices
 ---
 
@@ -17,6 +16,6 @@ tags:
 
 [pdf](/files/downloads/LAZY_DM_RESOURCE_DOCUMENT_090.pdf)
 
-Над проеактом работали: Redrick, Palant
+Над проектом работали: Redrick, Palant
 
 При перепосте ссылки на материал и самого материала - оставляйте ссылку на наш ресурс.
