--- a/src/content/posts/articles/variants-of-one-theme-complete-books-of-elves-adnd2.mdx
+++ b/src/content/posts/articles/variants-of-one-theme-complete-books-of-elves-adnd2.mdx
@@ -3,7 +3,7 @@ title: "Вариации одной Темы  [Complete Book of Elves]"
 description: "ФРАГМЕНТ перевода полной книги эльфов из AD&D 2ed"
 date: 2024-03-13
 tags:
-  - перевод
+  - Перевод
   - эльфы
   - Complete Book of Elves
   - Советы игроку
