--- a/src/content/posts/core-d20/about-weapon-mastery.mdx
+++ b/src/content/posts/core-d20/about-weapon-mastery.mdx
@@ -21,8 +21,7 @@ tags:
   - Уровни владения оружием
   - Оружейные техники
   - Оружейные действия
-  - translate
-  - перевод
+  - Перевод
   - Melestrua
 author: Melestrua
 ---
