--- a/src/content/posts/forgotten-realms/daggerdale-lordless-country-today.mdx
+++ b/src/content/posts/forgotten-realms/daggerdale-lordless-country-today.mdx
@@ -3,7 +3,7 @@ title: Страна без лордов
 description: перевод рассказа Эда Гринвуда про Даггердейл
 date: 2024-06-09
 tags:
-  - перевод
+  - Перевод
   - "Забытые Королевства"
   - "Forgotten Realms"
   - Даггердейл
