--- a/src/content/posts/forgotten-realms/drow-mechanicals.mdx
+++ b/src/content/posts/forgotten-realms/drow-mechanicals.mdx
@@ -6,7 +6,7 @@ tags:
   - "Забытые Королевства"
   - "Forgotten Realms"
   - Фаэрун
-  - перевод
+  - Перевод
   - Эд Гринвуд
   - Ed Greenwood
   - дроу
