--- a/src/content/posts/forgotten-realms/elven-noble-houses-and-title.mdx
+++ b/src/content/posts/forgotten-realms/elven-noble-houses-and-title.mdx
@@ -3,10 +3,9 @@ title: Эльфийские дворянские дома и титулы
 description: ПЕРЕВОД заметки Эрика Бойда про эльфийские дворянские дома и титулы в фаэруне
 date: 2024-03-19
 tags:
-  - "Забытые Королевства"
-  - "Forgotten Realms"
-  - перевод
-  - translate
+  - Забытые Королевства
+  - Forgotten Realms
+  - Перевод
   - Eric L. Boyd
 author: Eric L. Boyd
 ---
