--- a/src/content/posts/forgotten-realms/klyuchevye-npcs-v-flane.mdx
+++ b/src/content/posts/forgotten-realms/klyuchevye-npcs-v-flane.mdx
@@ -3,14 +3,12 @@ title: "Ключевые NPCs в Флане"
 description: "Ключевые NPCs в Флане"
 date: "2018-03-13"
 tags:
-  - "Забытые Королевства"
-  - "Forgotten Realms"
-  - "adventurers-league"
-  - "homebrew"
-  - "al"
-  - "npc"
-  - "phlan"
-  - "season-1"
+  - Забытые Королевства
+  - Forgotten Realms
+  - Лига Авантюристов
+  - homebrew
+  - Флан
+  - Сезон 1
 ---
 
 ## Nobles and Notables
