--- a/src/content/posts/forgotten-realms/night-in-haunted-castle.mdx
+++ b/src/content/posts/forgotten-realms/night-in-haunted-castle.mdx
@@ -3,7 +3,7 @@ title: Ночь в замке с привидениями
 description: перевод трактирной басни для Забытых Королевств авторства Эда Гринвуда
 date: 2024-06-09
 tags:
-  - перевод
+  - Перевод
   - "Забытые Королевства"
   - "Forgotten Realms"
   - Пограничные Королевства
