--- a/src/content/posts/forgotten-realms/nine-gods-of-elder-kalimshan.mdx
+++ b/src/content/posts/forgotten-realms/nine-gods-of-elder-kalimshan.mdx
@@ -5,7 +5,7 @@ date: 2025-02-06
 tags:
   - Забытые Королевства
   - Ed Greenwood
-  - перевод
+  - Перевод
   - Калимшан
   - божество
   - Ильматер
