--- a/src/content/posts/forgotten-realms/null-dragon-god-of-death.mdx
+++ b/src/content/posts/forgotten-realms/null-dragon-god-of-death.mdx
@@ -6,7 +6,7 @@ tags:
   - Забытые Королевства
   - Нулл
   - божество
-  - перевод
+  - Перевод
   - Ed Greenwood
 author: Ed Greenwood
 cover: '~assets/covers/null.png'
