--- a/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
+++ b/src/content/posts/forgotten-realms/worshipping-vhaeraun.mdx
@@ -3,7 +3,7 @@ title: Преклоняя колени перед Владыкой Теней
 description: ПЕРЕВОД статьи Эда Гринвуда про поклонение Ваэрауну, божеству из Темного Селдарина, пантеона дроу, сыну Лолт и брату Эйлистри  и как ему поклоняются не-дроу
 date: 2025-02-09
 tags:
-  - перевод
+  - Перевод
   - Забытые Королевства
   - божество
   - Ваэраун
