--- a/src/content/singles/books.mdx
+++ b/src/content/singles/books.mdx
@@ -3,14 +3,13 @@ title: Переведенные книги D&D старых редакций
 description: Переведенные книги D&D старых редакций
 date: 2023-09-05
 tags:
-  - перевод
+  - Перевод
   - AD&D
   - AD&D 2ed
   - D&D 3.0
   - D&D 3.5
   - D&D 4.0
   - OD&D
-  - translate
   - Советы Мастеру
   - Советы Игроку
   - Руководство Мастера
