--- a/src/content/posts/articles/new-old-files.mdx
+++ b/src/content/posts/articles/new-old-files.mdx
@@ -3,7 +3,7 @@ title: Новые, но старые файлы
 description: Новые, но на самом деле старые файлы базового руководства игрока и перевода розетского камня OSR
 date: "2023-08-02"
 tags:
-  - перевод
+  - Перевод
   - OSR
   - hackandslash
   - E5E
