--- a/src/content/posts/forgotten-realms/voprosy-i-otvety-eda-grinvuda-noyabr-2018-22.mdx
+++ b/src/content/posts/forgotten-realms/voprosy-i-otvety-eda-grinvuda-noyabr-2018-22.mdx
@@ -5,7 +5,7 @@ date: "2018-12-30"
 tags:
   - "Забытые Королевства"
   - "Forgotten Realms"
-  - перевод
+  - Перевод
   - Эд Гринвуд
   - Ed Greenwood
 ---
