--- a/src/content/posts/forgotten-realms/watchful-order-1499.mdx
+++ b/src/content/posts/forgotten-realms/watchful-order-1499.mdx
@@ -5,7 +5,7 @@ date: 2024-08-14
 tags:
   - Забытые Королевства
   - Вотердип
-  - перевод
+  - Перевод
   - Ed Greenwood
 author: Ed Greenwood
 ---
