--- a/src/content/posts/articles/waterdeep-resources.mdx
+++ b/src/content/posts/articles/waterdeep-resources.mdx
@@ -3,13 +3,12 @@ title: "Вотердип - ресурсы Мастера"
 description: "Подборка материалов для Мастера, который собрался водить в Вотердипе"
 date: "2023-09-14"
 tags:
-  - "translate"
-  - "перевод"
-  - "Alexandrian"
-  - "Waterdeep"
-  - "Вотердип"
-  - "Глубоководье"
-  - "Ресурсы"
+  - Перевод
+  - Alexandrian
+  - Waterdeep
+  - Вотердип
+  - Глубоководье
+  - Ресурсы
 ---
 
 Различная подборка ресурсов для Мастера, который планирует свою игру в Вотердипе.
