--- a/src/content/posts/forgotten-realms/derevo-fr.mdx
+++ b/src/content/posts/forgotten-realms/derevo-fr.mdx
@@ -3,8 +3,9 @@ title: "Деревья Забытых Королевств"
 description: "Деревья Забытых Королевств"
 date: "2016-04-21"
 tags:
-  - "Забытые Королевства"
-  - "Forgotten Realms"
+  - Забытые Королевства
+  - Forgotten Realms
+  - дерево
 ---
 
 Большое количество разных деревьев, встречающихся на Земле, вы сможете увидеть и в Забытых Королевствах. В тёплых регионах обычны: пальма, кокосовая пальма, черное дерево, кипарис, мангровое дерево. Вечнозеленые деревья встречаются в северных регионах, лиственные породы вы найдёте в лесах центральных регионов. Береза и тис редки во всех уголках Забытых Королевств; ольха, самшит, плоское дерево, красное дерево, сикомор в Королевствах не встречаются.
@@ -223,7 +224,7 @@ Flora of Faerun - Флора Фаэруна breadcumb
 Этот субтропическ ий сорт редко можно увидеть к северу от Шаара. Он обилен по берегам Чалта и южных побережий Фаэруна и, похоже, растет в любом ландшафте, за исключением горного.
  
  
-###Флора Серебрянных Кордонов
+### Флора Серебрянных Кордонов
  
 Бурный ландшафт Серебряных Кордонов обеспечивает огромное разнообразие сред обитания для животных и растений. Защищенные долины рек Сарбрин и Раувин являются более теплыми и солнечными, да и вообще намного более умеренными в климате, чем высокие проходы Незерийских или Ледяных гор.
  
@@ -310,18 +311,18 @@ Flora of Faerun - Флора Фаэруна breadcumb
  
 Если не отмечено иначе, специальные способности, свойственные этим веществам и изделиям - экстраординарные способности, и они остаются в силе даже в тех областях, где магия не функционирует.
  
-|Предметы                      | Стоимость | Вес |
-|------------------------------|----------:|-----|
-|Темные ягоды                  |  5 зм     |-    |
-|Пыль фей (1 унция)            |100 зм     |-    |
-|Масло цветка фелсула (1 унция)|100 зм     |-    |
-|Туманная скала                |  5 зм     |-    |
-|Пыльца мула                   | 50 зм     |-    |
-|Красная ягода шлемошипа       |  1 ер     |-    |
-|Факел из шэдоутопа            |  1 ер     |1 фнт|
-|Сок серебряной коры (1 унция) | 20 зм     |-    |
-|Стручок сон-травы             | 50 зм     |-    |
-|Вейрвуд                       | 50 зм/фнт |как предметы|
+| Предметы                       | Стоимость | Вес          |
+| ------------------------------ | --------: | ------------ |
+| Темные ягоды                   |      5 зм | -            |
+| Пыль фей (1 унция)             |    100 зм | -            |
+| Масло цветка фелсула (1 унция) |    100 зм | -            |
+| Туманная скала                 |      5 зм | -            |
+| Пыльца мула                    |     50 зм | -            |
+| Красная ягода шлемошипа        |      1 ер | -            |
+| Факел из шэдоутопа             |      1 ер | 1 фнт        |
+| Сок серебряной коры (1 унция)  |     20 зм | -            |
+| Стручок сон-травы              |     50 зм | -            |
+| Вейрвуд                        | 50 зм/фнт | как предметы |
  
 Темные ягоды: Эти маленькие пурпурные ягоды растут в глубинах многих лесов, окружающих Море Упавших Звезд. Лишь несколько ягод созревают на каждом из кустарников каждую осень, и с каждым годом это происходит все реже. Темные ягоды фактически содержат у себя внутри теневую сущность. Когда созревшие темные ягоды надломлены или растерты, создается круг черноты 5-футового диаметра в течение 2 раундов.
  
