--- a/src/content/posts/articles/ring-of-wizardry.mdx
+++ b/src/content/posts/articles/ring-of-wizardry.mdx
@@ -18,5 +18,8 @@ tags:
 
 _Кольцо, очень редкое (требуется настройка волшебником)_
 
-На этом костяном кольце выгравированы серебряные символы звезд, комет и солнц. Создание кольца волшебства включает в себя несколько поразительных магических подвигов, теперь недоступных академическим заклинателям. Маг должен вырастить клона, наделить его магическими знаниями и извлечь из него палец. Из костей этого пальца вырезано кольцо волшебства. Существует история о «Девятипалом маге», клоне, который избежал полного процесса изготовления кольца, но не настолько быстро, чтобы сохранить каждую цифру.
+На этом костяном кольце выгравированы серебряные символы звезд, комет и солнц. Создание кольца волшебства включает в себя несколько поразительных магических подвигов, теперь недоступных академическим заклинателям. Маг должен вырастить клона, наделить его магическими знаниями и извлечь из него палец. Из костей этого пальца вырезано кольцо волшебства. 
+
+Существует история о «Девятипалом маге», клоне, который избежал полного процесса изготовления кольца, но не настолько быстро, чтобы сохранить все пальцы.
+
 При настройке на это кольцо вы получаете одну дополнительную ячейку заклинаний, которые у вас есть, для каждого круга заклинания, которое вы можете сотворять до 4-го круга.
