--- a/src/content/posts/forgotten-realms/halruaa-today.mdx
+++ b/src/content/posts/forgotten-realms/halruaa-today.mdx
@@ -61,3 +61,7 @@ cover: '~assets/covers/HalruaaBlazon.webp'
 Магию теперь уважают, а не доверяют ей, и используют осторожно, а не повсеместно. Халруаа возобновила добычу полезных ископаемых и производство хаэрлуского вина, и через своих посланников ведет дела с Открытым Лордом Лаэралем в далеком Вотердипе, Верховным Аррухом Ормпура и лордами Ташалара гораздо ближе, чтобы обеспечить стабильные рынки для урожая.
 
 Страна магии смирилась. Теперь это просто страна магии, а не место, где можно бросить вызов Таю или Зентариму. Хотя Эльминстер твердо убежден, что если кто-то из этих агрессоров окажется достаточно глуп, чтобы вторгнуться в страну, то они вполне могут быть усмирены халруаанами. “И это, - добавил он, - еще до того, как мы, мастера плетения, добавим свой вес к их заклинаниям”.
+
+---
+
+[Статья про Халруаа на frwiki](https://forgottenrealms.fandom.com/wiki/Halruaa)
